[gd_scene load_steps=28 format=3 uid="uid://dc15gur6va682"]

[ext_resource type="Texture2D" uid="uid://da61x6b73yfmt" path="res://Ocean/assets/lobby1.png" id="1_f0e2l"]
[ext_resource type="PackedScene" uid="uid://bd2j3uyagvny6" path="res://Player/player.tscn" id="2_34dcp"]
[ext_resource type="PackedScene" uid="uid://vq2smpjqo27e" path="res://Physics/Camera.tscn" id="2_74xfi"]
[ext_resource type="Texture2D" uid="uid://jgqql1w4s0kp" path="res://Ocean/assets/lobby2.png" id="2_xc6jl"]
[ext_resource type="Script" path="res://Lobby/ParallaxBackground.gd" id="3_1jya6"]
[ext_resource type="Texture2D" uid="uid://b72ta181gmw15" path="res://Ocean/assets/lobby3.png" id="3_url1u"]
[ext_resource type="Texture2D" uid="uid://bn2t3ja84uj1g" path="res://Ocean/assets/lobby4.png" id="4_rrptn"]
[ext_resource type="Texture2D" uid="uid://bf75745t0d0ou" path="res://Ocean/assets/lobby5.png" id="5_35ip1"]
[ext_resource type="Script" path="res://Lobby/AreaBoatStore.gd" id="6_bvbaj"]
[ext_resource type="Script" path="res://Lobby/AreaDivingShop.gd" id="6_q4na1"]
[ext_resource type="Texture2D" uid="uid://bqdnkbeovmid1" path="res://Ocean/assets/lobby6.png" id="6_spbpc"]
[ext_resource type="PackedScene" uid="uid://cox4vp7vm1fbh" path="res://Interaction/DivingStore/DivingStore.tscn" id="7_1e14h"]
[ext_resource type="Texture2D" uid="uid://cerofkr2tcogn" path="res://Ocean/assets/lobby7.png" id="7_bmkl1"]
[ext_resource type="PackedScene" uid="uid://dcab7mg225do8" path="res://Interaction/BoatStore/BoatStore.tscn" id="7_miohy"]
[ext_resource type="Texture2D" uid="uid://bl4ucbc26kofa" path="res://Ocean/assets/lobby8.png" id="8_ccjlc"]
[ext_resource type="Script" path="res://Lobby/AreaTrashStore.gd" id="8_m541e"]
[ext_resource type="Texture2D" uid="uid://dsnjsnwbrj6qj" path="res://Ocean/assets/lobby9.png" id="8_ypbk7"]
[ext_resource type="PackedScene" uid="uid://3ivl1jtnhnrg" path="res://Interaction/TrashStore/TrashStore.tscn" id="9_u54b7"]
[ext_resource type="Script" path="res://Lobby/Island.gd" id="10_ds02q"]
[ext_resource type="Texture2D" uid="uid://diecigklwosh6" path="res://Interaction/BoatStore/ship.png" id="11_ua0qi"]
[ext_resource type="PackedScene" uid="uid://vfv4daj8tbb" path="res://Interaction/Island/Island.tscn" id="11_xup3q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6svd"]
size = Vector2(70.5, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18moi"]
size = Vector2(166.474, 167.997)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4om3k"]
size = Vector2(2329.85, 909.661)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_egh2g"]
size = Vector2(1168, 296)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4d0e7"]
size = Vector2(36, 615)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gjd16"]
size = Vector2(2181.33, 724.017)

[node name="Lobby" type="Node2D"]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(575.194, 407)
scale = Vector2(0.328226, 0.328226)

[node name="Lobby" type="Sprite2D" parent="Node2D"]
z_index = -10
texture_filter = 2
texture = ExtResource("1_f0e2l")

[node name="Lobby2" type="Sprite2D" parent="Node2D"]
z_index = -9
texture_filter = 2
texture = ExtResource("2_xc6jl")

[node name="ParallaxBackground" type="ParallaxBackground" parent="Node2D"]
layer = 1
script = ExtResource("3_1jya6")

[node name="ParallaxLayer" type="ParallaxLayer" parent="Node2D/ParallaxBackground"]
position = Vector2(575.194, 407)
scale = Vector2(0.328226, 0.328226)

[node name="Lobby3" type="Sprite2D" parent="Node2D/ParallaxBackground/ParallaxLayer"]
texture_filter = 2
texture = ExtResource("3_url1u")

[node name="Lobby4" type="Sprite2D" parent="Node2D"]
texture_filter = 2
texture = ExtResource("4_rrptn")

[node name="Lobby5" type="Sprite2D" parent="Node2D"]
z_index = -3
texture_filter = 2
texture = ExtResource("5_35ip1")

[node name="Lobby9" type="Sprite2D" parent="Node2D"]
z_index = -2
texture_filter = 2
texture = ExtResource("8_ypbk7")

[node name="Lobby6" type="Sprite2D" parent="Node2D"]
z_index = -2
texture_filter = 2
texture = ExtResource("6_spbpc")

[node name="Lobby7" type="Sprite2D" parent="Node2D"]
texture_filter = 2
texture = ExtResource("7_bmkl1")

[node name="Lobby8" type="Sprite2D" parent="Node2D"]
z_index = 5
texture_filter = 2
texture = ExtResource("8_ccjlc")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
offset_left = -82.0
offset_top = 557.0
offset_right = 2648.0
offset_bottom = 1797.0
color = Color(0.0235294, 0.431373, 0.721569, 0.686275)

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -8
position = Vector2(59, 449)
scale = Vector2(0.211566, 0.211566)
texture = ExtResource("11_ua0qi")

[node name="Player" parent="." instance=ExtResource("2_34dcp")]
position = Vector2(281.025, 527)
scale = Vector2(0.263, 0.263)

[node name="Camera2" parent="Player" instance=ExtResource("2_74xfi")]
position = Vector2(-3.89734, -129.277)
scale = Vector2(3.80228, 3.80228)
zoom = Vector2(3.245, 3.245)
limit_left = 0
limit_right = 1150

[node name="AreaDivingShop" type="Area2D" parent="."]
position = Vector2(0, 3.05176e-05)
script = ExtResource("6_q4na1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDivingShop"]
position = Vector2(562.75, 504.5)
shape = SubResource("RectangleShape2D_w6svd")

[node name="DivingShop" parent="AreaDivingShop" instance=ExtResource("7_1e14h")]
visible = false

[node name="AreaBoatStore" type="Area2D" parent="."]
position = Vector2(575, 406)
scale = Vector2(0.328226, 0.328226)
script = ExtResource("6_bvbaj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaBoatStore"]
position = Vector2(376.812, 290.743)
shape = SubResource("RectangleShape2D_18moi")

[node name="BoatStore" parent="AreaBoatStore" instance=ExtResource("7_miohy")]
visible = false

[node name="AreaTrashStore" type="Area2D" parent="."]
position = Vector2(763.73, 539.26)
scale = Vector2(0.107732, 0.107732)
script = ExtResource("8_m541e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTrashStore"]
position = Vector2(2262.74, -540.782)
shape = SubResource("RectangleShape2D_4om3k")

[node name="TrashStore" parent="AreaTrashStore" instance=ExtResource("9_u54b7")]
visible = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(575, 406)
scale = Vector2(0.328226, 0.328226)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2(15.233, 827.737)
scale = Vector2(3.04668, 3.04668)
shape = SubResource("RectangleShape2D_egh2g")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1806.25, -330.565)
scale = Vector2(3.04668, 3.04668)
shape = SubResource("RectangleShape2D_4d0e7")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1807.35, -330.565)
scale = Vector2(3.04668, 3.04668)
shape = SubResource("RectangleShape2D_4d0e7")

[node name="Island" type="Area2D" parent="."]
position = Vector2(763.73, 539.26)
scale = Vector2(0.107732, 0.107732)
script = ExtResource("10_ds02q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Island"]
position = Vector2(-6035.61, -373.702)
shape = SubResource("RectangleShape2D_gjd16")

[node name="Island" parent="Island" instance=ExtResource("11_xup3q")]
visible = false

[connection signal="body_entered" from="AreaDivingShop" to="AreaDivingShop" method="_on_body_entered"]
[connection signal="body_exited" from="AreaDivingShop" to="AreaDivingShop" method="_on_body_exited"]
[connection signal="body_entered" from="AreaBoatStore" to="AreaBoatStore" method="_on_body_entered"]
[connection signal="body_exited" from="AreaBoatStore" to="AreaBoatStore" method="_on_body_exited"]
[connection signal="body_entered" from="AreaTrashStore" to="AreaTrashStore" method="_on_body_entered"]
[connection signal="body_exited" from="AreaTrashStore" to="AreaTrashStore" method="_on_body_exited"]
[connection signal="body_entered" from="Island" to="Island" method="_on_body_entered"]
[connection signal="body_exited" from="Island" to="Island" method="_on_body_exited"]
